--- a/HOME/css/style.css
+++ b/HOME/css/style.css
@@ -1,6 +1,21 @@
-    #app {
-      display: inline-block;
-      padding: 10px;
-      font-size: x-large;
-      background-color: lightgreen;
-    }
+#app {
+    display: inline-block;
+    padding: 10px;
+    font-size: x-large;
+    background-color: lightgreen;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: DodgerBlue;
+}
+ 
+.container div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;  
+  font-size: 30px;
+}
