--- a/HOME/css/style2.css
+++ b/HOME/css/style2.css
@@ -1,46 +1,12 @@
-* {
-  box-sizing: border-box;
+#app2 > div {
+    border: solid black 1px;
+    width: 80%;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
- 
-body {
-  margin: 0;
-  font-family: Arial;
+img {
+    width: 70px;
+    margin: 10px;
 }
- 
-.header {
-  text-align: center;
-  padding: 32px;
-}
- 
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
- 
-/* Create four equal columns that sits next to each other */
-.column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
-}
- 
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
-}
- 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
- 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
